[project]
name = "my-fastapi-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite==0.21.0",
    "annotated-types==0.7.0",
    "anyio==4.10.0",
    "certifi==2025.8.3",
    "charset-normalizer==3.4.3",
    "click==8.2.1",
    "dotenv==0.9.9",
    "fastapi==0.116.1",
    "h11==0.16.0",
    "idna==3.10",
    "pandas>=2.3.2",
    "praw==7.8.1",
    "prawcore==2.4.0",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "python-dotenv==1.1.1",
    "requests==2.32.5",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.43",
    "starlette==0.47.3",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.1",
    "update-checker==0.18.0",
    "urllib3==2.5.0",
    "uvicorn==0.35.0",
    "websocket-client==1.8.0",
]
